--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,21 @@
 name: CI
+
 on: [push, pull_request]
+
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest 
+
     steps:
       - uses: actions/checkout@v4
-      - name: Install deps
-        run: pip install -r requirements.txt
-      - name: Run tests
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10
+
+      - name: Check Python version
         run: python --version
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
